--- a/packages/logos-docusaurus-theme/src/client/theme/style.module.css
+++ b/packages/logos-docusaurus-theme/src/client/theme/style.module.css
@@ -1,12 +1,9 @@
 .root {
   width: 100%;
-  max-width: 1440px;
   margin: 0 auto;
   padding: 0;
+  max-width: var(--container-max-width);
 }
 
 @media (max-width: 997px) {
-  .root {
-    padding-inline: 16px;
-  }
 }
